# wald

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build-local.sh  build.sh  docker-compose.test.yml  pyproject.toml
example/: docker-compose.yaml
scripts/: entrypoint.sh  init-walg.sh
test/: conftest.py  test_backup_duplicaid.py
